kafka-cluster/cluster-with-oauth/kafka-ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-ui
  labels:
    istio-injection: enabled
