kafka-cluster/cluster-with-oauth/kafka-ui/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: kafka-ui
spec:
  hosts:
    - kafka-ui.local.io
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kafka-ui.kafka-ui.svc.cluster.local
            port:
              number: 80
---
